export interface BackofficeUserDTO {
    name: string
    email: string
    phoneNumber: string
    password: string
}
