export interface ElevatorDTO {
    floors: number[]
    brand?: string
    model?: string
    serialNumber?: string
    description?: string
}
