export interface PassageDTO {
    floor1: {
        buildingCode: string
        floorNumber: number
    }
    floor2: {
        buildingCode: string
        floorNumber: number
    }
}
