export interface RobotDTO {
    code: string
    nickname: string
    typeCode: string
    serialNumber: string
    description?: string
    state: number
}
