@startuml

skinparam linetype ortho
skinparam Shadowing False

skinparam class {
    BackgroundColor<<>> Moccasin
    BackgroundColor<<value object>> Azure
    BackgroundColor<<Event>> MediumAquaMarine
    BackgroundColor<<Service>> SkyBlue
    ArrowColor DarkSlateGrey
}

skinparam package {
    BackgroundColor PowderBlue
    packageLayout grid
    packageColumn 2
}

'LIGACOES DENTRO DO AGREGADO FICAM DENTRO DO PACKAGE
'LIGACOES ENTRE AGREGADOS FICAM NO FINAL DO FICHEIRO DEPOIS DOS PACKAGES

    class Building{
        - code
        - name
        - description
        - maxLength
        - maxWidth
    }
    class Elevator{
        - description
        - brand
        - model
        - serialNumber
    }

    class Floor{
        - floorNumber
        - description
    }

    class Passage{

    }

    class Room{
        - name
        - description
        - roomCategory
        - dimensions
        - position
    }


    class Robot{
        - code
        - nickName
        - serialNumber
        - description
    }
    class RobotType{
        - brand
        - model
    }
    note left: in order to fulfill the client's needs,\ncurrently there will be 2 types of robots:\nRobisep and Droneisep, but it can scale as needed
    class TaskType{
    }
    note left: in order to fulfill the client's needs,\ncurrently there will be 2 types of tasks:\nSurveillance and deliveries, but it can scale as needed


    class Role{
        -name
    }

    class Client{
        -name
        -email
        -phoneNumber
        -nif
        -status
    }

    class BackofficeUser{
        -name
        -email
        -phoneNumber
    }


    'ROBOTS
    Robot "*" --> "1" RobotType

    RobotType --> "1..*" TaskType: can execute
    Robot "1" <-- Task: executed by
    TaskType <-- "*" Task


    'Buildings
    Building "1" --> "1..*" Floor
    Floor "*" <-- "1" Elevator
    Building "1" <-- Elevator
    Passage "1" ---> "2" Floor : connects
    Floor "1" ---> "0..*" Room


    'USERS
    'Client --> "1" Role : has
    BackofficeUser --> "1" Role : has




    }




@enduml

